# evalstats

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  demo.py  demo_analyze.py  demo_analyze_multirun.py  demo_analyze_multirun_delete_words.py  demo_compare_models.py  demo_openai.py  index.html  pyproject.toml
.github/workflows/: release-check.yml
evalstats/: __init__.py  cli.py  compare.py  config.py  io.py
evalstats/core/: bayes_evals.py  paired.py  ranking.py  resampling.py  router.py  summary.py  types.py  variance.py
evalstats/vis/: __init__.py  critical_difference.py  forest.py  heatmap.py  point_estimates.py  scoreboard.py
examples/: analyze_multirun_walkthrough.ipynb  compare_models_binary.py  compare_models_multirun.py  compare_models_prompts_from_csv.py  compare_models_simple.py  compare_prompts_simple.py  delete_only_multirun.py  example_boolq_deepeval.py  factorial_prompt_template_variations.py  factorial_rag_demo.py  sentiment.py  sentiment_manual_api_calls.py  sentiment_multirun.py  sentiment_ollama.py  summarization_cot_demo.py  support_ticket_prompts.py  synthetic_mean_advantage.py
promptstats/: __init__.py  cli.py  compare.py  config.py  factorial.py  io.py
promptstats/core/: bundles.py  mixed_effects.py  paired.py  ranking.py  router.py  (+6 more)
scripts/: rename_promptstats_to_evalstats.py
simulations/: bayes_evals.py  collect_inspect_benchmarks.py  explore_dove.py  explore_eee.py  sim_compare_bayes.py  sim_compare_boot.py  sim_compare_boot_nested.py  sim_compare_pvalues.py  sim_dove.py  sim_tango_real.py
tests/: test_analyze.py  test_analyze_factorial.py  test_auto_ci_routing.py  test_bayes_binary_routing.py  test_cli.py  test_compare_models.py  test_compare_prompts.py  test_critical_difference_plot.py  test_io.py  test_lmm.py  test_lmm_backend_parity.py  test_lmm_statsmodels.py  test_nig_ci_methods.py  test_p_values.py  test_permutation.py  test_resampling.py  test_scoreboard_plot.py  test_set_alpha_ci.py  test_simultaneous_ci.py  test_wilson_newcombe.py
website/: AGENT.md  BUILDING.md  LICENSE  build.py  choose.css  choose.html  dark.js  gen_stubs.py  index.css  index.html  inv.css  nb.css  principles.html  resources.html  roadmap.html
(+35 files in other folders)
